# e8mate

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PRODUCT_SPEC.md  contributing.md
e8mate/: __init__.py  cli.py  diff.py  scanner.py
e8mate/collectors/: admin_privs.py  app_control.py  app_hardening.py  backups.py  base.py  macro_settings.py  mfa.py  patch_apps.py  patch_os.py
e8mate/evidence/: models.py
e8mate/frameworks/: __init__.py  registry.py
e8mate/reporters/: html_reporter.py  json_reporter.py
e8mate/reporters/templates/: report.html.j2
e8mate/scanners/: __init__.py
e8mate/scoring/: maturity.py
e8mate/transports/: local.py  mock.py  winrm_transport.py
e8mate/utils/: security.py
examples/: sample-config.yaml
nuclei-templates/e8-app-hardening/: missing-security-headers.yaml  smbv1-enabled.yaml  weak-tls.yaml
nuclei-templates/e8-mfa/: owa-exposed.yaml  rdp-exposed.yaml
nuclei-templates/e8-patch-apps/: outdated-iis.yaml
rules/: ml1.yaml
scanner/: external_scan.py
